<resources>
    <string name="app_name">VkApi-Sandbox</string>

    <!-- General strings -->
    <string name="general_back_button">Для выхода из приложения нажмите \"назад\" еще раз</string>

    <!-- Friends strings -->
    <string name="friends_count">Всего: %1$s</string>

    <!-- Profile strings -->
    <string name="profile_last_seen_man">Был %1$s в %2$s</string>
    <string name="profile_last_seen_woman">Была %1$s в %2$s</string>
    <string name="profile_last_seen_woman_today">Была в %1$s</string>
    <string name="profile_last_seen_man_today">Был в %1$s</string>
    <string name="profile_online">Онлайн</string>
    <string name="profile_error">Не удалось загрузить профиль. Проверьте интернет-соединение.</string>
    <string name="profile_expand_info">Развернуть профиль</string>
    <string name="profile_wall_count">Записей на стене: %1$s</string>

    <!-- Menu strings -->
    <string name="menu_my_profile">Мой профиль</string>
    <string name="menu_friends">Друзья</string>
    <string name="menu_bookmarks">Закладки</string>
    <string name="menu_documents">Документы</string>
    <string name="menu_photos">Фотографии</string>
    <string name="menu_groups">Группы</string>

    <!-- Documents strings -->
    <string name="docs_all">Все</string>
    <string name="docs_anims">Анимации</string>
    <string name="docs_archives">Архивы</string>
    <string name="docs_audio">Аудио</string>
    <string name="docs_video">Видео</string>
    <string name="docs_pics">Изображения</string>
    <string name="docs_text">Текстовые</string>
    <string name="docs_others">Прочие</string>

    <!-- Post strings -->
    <string name="post_repost">Репост</string>

    <!-- Settings strings -->
    <string name="settings_exit">Выйти</string>
</resources>
